--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,27 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
+
+h2 {
+  font-family: Helvetica, sans-serif;
+  margin-top: 50px;
+}
+
+.ticker-container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+   background-color: #F0EDEE;
+ }
+
+ .ticker {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   padding: 30px;
+   width: 80%;
+   height: 500px;
+   background-color: #F0EDEE;
+ }
